[package]
name = "grid"
version = "0.1.0"
authors = ["tim"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
rand = "0.8.3"
rand_core = {version= "0.6.2", features=["std"]}
num = "0.4.0"